--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "vue-technical-challenge-keeper",
+  "name": "cryptocurrency-poc-by-hamster",
   "version": "1.2.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "yarn": ">=1.22.0"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
